# dema-ai-code-challenge

./: .gitignore  README.MD  pyproject.toml
app/: config.py  graphql.py  main.py  models.py
db/: db.sqlite3-shm  db.sqlite3-wal
migrations/models/: 0_20231118143053_init.py
scripts/: import_data.py
